# shootadoc

./: .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg
src/shootadoc/: __main__.py  _cli_no_numpy.py  cli.py
