[metadata]
name = shootadoc
version = attr: shootadoc.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE
description = Photograph a document and turn it into a high quality black-and-white image
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/shootadoc
    Change Log = https://github.com/akaihola/shootadoc/blob/main/CHANGES.rst
url = https://github.com/akaihola/shootadoc

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    click
    Pillow
    typing-extensions ; python_version < "3.8"
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    shootadoc = shootadoc.__main__:main

[options.extras_require]
test =
    pylint
    pytest>=6.1.0
    pytest-darker
    pytest-flake8>=1.0.6
    pytest-isort>=1.1.0
    pytest-mypy
    pygments

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # E231 missing whitespace after ','
    E231
    # W503 line break before binary operator
    W503
